# TAE-RECON6

./: .gitignore  LICENSE  README.md  __init__.py  descriptors.py  element.py  pyproject.toml  recon.py  setup.py  sparse.py  taedat.py
DATA/: bond
examples/: run_example.py
recon6/: __main__.py  atyper.py  bonds.py  connectivity.py  fortranio.py  gettae.py  gnn_export.py  hydrogenate.py  periodic.py  recon.py  ringid.py
recon6/readers/: __init__.py  gaussian.py  mol2.py  orca.py  pdb.py  sdf.py  smiles.py
tests/: test_config.py  test_data_fields.py  test_gaussian_reader.py  test_gnn_export.py  test_hydrogenate.py  test_integration.py  test_integration_smiles.py  test_integration_toxx.py  test_orca_reader.py  test_pdb_reader.py  test_readers.py  test_ringid.py  test_streaming.py
